# plugdata

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  HowToDiscussDesign.txt  ObjectDocumentation  PlugData.jucer  README.md  bb.c  bb.h  nanovg_mtl_shaders.metal
Libraries/: CMakeLists.txt  CMakeLists.txt~
Libraries/ASIO/: README.md  changes.txt
Libraries/ASIO/asio/: asio.dsw
Libraries/ASIO/common/: asio.cpp  asiodrvr.cpp  asiodrvr.h  combase.cpp  combase.h  debugmessage.cpp  dllentry.cpp  register.cpp  wxdebug.h
Libraries/ASIO/host/: ASIOConvertSamples.cpp  ASIOConvertSamples.h  asiodrivers.cpp  asiodrivers.h  ginclude.h
Libraries/ELSE/: add~.c  autofade~.c  balance~.c  bandpass~.c  bicoeff.c  brown~.c  canvas.name.c  changed.c  changed2~.c  comb.filt~.c  comb.rev~.c  cosine~.c  default.c  dir.c  downsample~.c  dust~.c  eq~.c  fdn.rev~.c  ffdelay~.c  float2sig~.c  floor~.c  freq.shift~.c  function~.c  gbman~.c  giga.rev~.c  glide2~.c  glide~.c  gray~.c  henon~.c  hz2rad~.c  ikeda~.c  impseq~.c  impulse2~.c  impulse~.c  keyboard.c  latoocarfian~.c  lb.c  limit.c  loadbanger.c  loop.c  (+68 more)
Libraries/ELSE/Abstractions/: All_objects.pd  LICENSE.txt  allpass.filt~.pd  allpass_unit.pd  alternate.pd  amean.pd  any2symbol.pd  any_argument.pd  autotune.pd  autotune2.pd  avg.pd  bangdiv.pd  batch.rec~.pd  batch.write~.pd  bin.shift~.pd  biplot.pd  bl.imp2~.pd  bl.imp~.pd  bl.osc~.pd  bl.saw2~.pd  bl.saw~.pd  bl.sine~.pd  bl.square~.pd  bl.tri~.pd  bl.vsaw~.pd  bl.wavetable~.pd  blip~.pd  bpbank~.pd  bpclone.pd  bpm.pd  brickwall~.pd  brown.pd  car2pol.pd  car2pol~.pd  cents2frac.pd  cents2scale.pd  chorus~.pd  chrono.pd  circle.pd  clip.pd  (+218 more)
Libraries/ELSE/Aliases/: f2s~.c  imp2~.c  imp~.c  wt~.c
Libraries/ELSE/Extra/: All_about_else.pd  All_objects.pd  CHANGELOG.txt  README.deken.pd  args-example.pd  bagal.aif  bday.mid  bicoeff.tcl  dholak.aif  diamond7.scl  didge.aif  dollsym-example.pd  else-meta.pd  else-v1.0rc6-objects.txt  else-v1.0rc7-objects.txt  else-v1.0rc8-objects.txt  fontsize-example.pd  grain.live.grain.pd  grain.sampler.grain.pd  grain.synth.grain.pd  gran~.pd  midi-seq.mid  midi-seq.txt  multi.vsl.clone.ex.pd  preset-basic.txt  preset1.txt  preset2.txt  preset3.txt  preset4.txt  presets.send.clone.pd  pvoc~.pd  rec-ex.txt  score-1.txt  score-2.txt  score-3.txt  score-ex1.pd  score2-1.txt  score2-2.txt  vocoder.band_clone.pd  voice.pd
Libraries/ELSE/Help-files/: above-help.pd  above~-help.pd  add-help.pd  add~-help.pd  adsr~-help.pd  allpass.2nd~-help.pd  allpass.filt~-help.pd  allpass.rev~-help.pd  amean-help.pd  any2symbol-help.pd  args-help.pd  asr~-help.pd  autofade2~-help.pd  autofade~-help.pd  autotune-help.pd  autotune2-help.pd  avg-help.pd  balance~-help.pd  bandpass~-help.pd  bandstop~-help.pd  bangdiv-help.pd  batch.rec~-help.pd  batch.write~-help.pd  beat~-help.pd  bend.in-help.pd  bend.out-help.pd  bicoeff-help.pd  bicoeff2-help.pd  bin.shift~-help.pd  biplot-help.pd  biquads~-help.pd  bitnormal~-help.pd  bl.imp2~-help.pd  bl.imp~-help.pd  bl.osc~-help.pd  bl.saw2~-help.pd  bl.saw~-help.pd  bl.sine~-help.pd  bl.square~-help.pd  bl.tri~-help.pd  (+450 more)
Libraries/ELSE/Source/: Makefile  adsr~.c  allpass.2nd~.c  allpass.rev~.c  args.c  asr~.c  balance~.c  bandpass~.c  bandstop~.c  beat~.c  bend.in.c  bend.out.c  bicoeff.c  bicoeff2.c  biquads~.c  bitnormal~.c  bl.imp2~.c  bl.imp~.c  bl.osc~.c  bl.saw2~.c  bl.saw~.c  bl.square~.c  bl.tri~.c  bl.vsaw~.c  blosc~.c  brown~.c  buffer_obj.c  button.c  canvas.active.c  canvas.file.c  canvas.gop.c  canvas.mouse.c  canvas.name.c  ceil.c  ceil~.c  cents2ratio.c  cents2ratio~.c  chance.c  chance~.c  changed~.c  (+209 more)
Libraries/ELSE/camomile/: above.pd  add.pd  allpass.filt~.pd  amean.pd  autotune.pd  autotune2.pd  avg.pd  batch.write~.pd  bin.shift~.pd  biplot.pd  bl.saw2~.pd  bl.vsaw~.pd  bl.wavetable~.pd  bpbank~.pd  bpm.pd  cents2frac.pd  cents2scale.pd  chorus~.pd  circle.pd  clock.pd  coeff2pz.pd  combine.pd  count.pd  dec2hex.pd  deg2rad.pd  display.pd  drum.seq.pd  drunkard.pd  drunkard~.pd  duck~.pd  echo_unit.pd  envelope~.pd  eqdiv.pd  euclid.pd  flanger~.pd  frac.add.pd  frac.mul.pd  freeze.osc.clone~.pd  freeze~.pd  freq2midi.pd  (+90 more)
Libraries/ELSE/old/: above~.c  args.c  autofade2~.c  autofade~.c  bend.out.c  blocksize~.c  break.c  canvas.edit.c  canvas.name.c  canvas.setname.c  (+70 more)
Libraries/FluidLite/: fluidlite-config.cmake.in  fluidlite.pc.in
Libraries/Heavy/: CMakeLists.txt  generate_source.sh
Libraries/LV2/: juce_LV2_FileCreator.cpp  juce_LV2_Wrapper.cpp  main.c
Libraries/cpath/: LICENSE  README.md  cpath.h
Libraries/cyclone/: LICENSE.txt  README.md  cyclone_lib.c
Libraries/ff_meters/: ff_meters.h
Libraries/fftw3/: CMakeLists.txt
Libraries/libpd/: m_libpd_class.c  s_libpd_inter.c  s_libpd_inter.h  s_libpd_inter_gui.c  s_libpd_midi.c  x_libpd_extra_utils.c  x_libpd_extra_utils.h  x_libpd_mod_utils.c  x_libpd_mod_utils.h  x_libpd_multi.c  x_libpd_multi.h  x_libpd_ofelia.cpp  x_libpd_receive.c  x_libpd_receive.h  x_libpd_refcounter.cpp  x_libpd_refcounter.h  x_libpd_weakreference.cpp  x_libpd_weakreference.h  x_libpdreceive.c  x_libpdreceive.h  z_hooks.c  z_hooks.h  z_libpd.c  z_libpd.h  z_print_util.c  z_print_util.h
Libraries/nanovg-dev/: CMakeLists.txt
Libraries/pthread-win32/: .gitattributes  .gitignore  Bmakefile  CMakeLists.txt  ChangeLog.md  GNUmakefile  GNUmakefile.in  Makefile  README.md  _ptw32.h  aclocal.m4  appveyor.yml  cleanup.c  config.h  configure.ac  context.h  create.c  dll.c  errno.c  global.c  implement.h  mamafile.py  need_errno.h  pthread-EH.cpp  pthread-JMP.c  pthread.c  pthread.h  pthread_attr_destroy.c  pthread_attr_getaffinity_np.c  pthread_attr_getdetachstate.c  pthread_attr_getinheritsched.c  pthread_attr_getname_np.c  pthread_attr_getschedparam.c  pthread_attr_getschedpolicy.c  pthread_attr_getscope.c  pthread_attr_getstackaddr.c  pthread_attr_getstacksize.c  pthread_attr_init.c  pthread_attr_setaffinity_np.c  pthread_attr_setdetachstate.c  (+132 more)
Libraries/raw-keyboard-input-module/: CMakeLists.txt  README.md
Libraries/stb/: stb_image_resize2.h
(+7410 files in other folders)
